src/test/deca/codegen/valid/no-objects/print_expr.deca
// Description:
//    Test de print d'une expression
//
// Resultats:
//    4
//
// Historique:
//    cree le 15/01/2022
{
    println(2 + 2);
}