src/test/deca/codegen/invalid/no-objects/divide_by_zero_mod.deca
// Description:
//    Test d'une divison par zero, avec Modulo
//
// Resultats:
//    Erreur: divison par zéro
//
// Historique:
//    cree le 15/01/2022
{
    println(42 % 0);
}
